force-app/main/default/objects/Job_Application__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <label>Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>1st Interview</fullName>
            </value>
            <value>
                <fullName>2nd Interview</fullName>
            </value>
            <value>
                <fullName>3rd Interview</fullName>
            </value>
            <value>
                <fullName>4th Interview</fullName>
            </value>
            <value>
                <fullName>5th Interview</fullName>
            </value>
            <value>
                <fullName>No Updates</fullName>
            </value>
            <value>
                <fullName>No Reply</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Job Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>