force-app/main/default/objects/Job_Application__c/fields/Applied_Through__c.field-meta.xml
<CustomField>
    <fullName>Applied_Through__c</fullName>
    <label>Applied Through</label>
    <type>TextArea</type>
</CustomField>