force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Application_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>