force-app/main/default/objects/Job_Application__c/listViews/Job_Application_View.listView-meta.xml
<ListView>
    <fullName>Job_Application_View</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Application_Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Title__c</columns>
    <columns>Applied_Through__c</columns>
    <filterScope>Mine</filterScope>
    <label>Job Application View</label>
</ListView>